fix underline on safari by adding a fallback

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -195,6 +195,7 @@ nav {
 
 nav a {
 	color: var(--color-text-light);
+	text-decoration: none; /* Fallback for iOS Safari */	
 	text-decoration: transparent;
 	font-weight: bold;
 }
